# ClipACanvas

./: .gitignore  .vercelignore  ClipACanvas.spec.bak  Dockerfile  LICENSE.md  MARKETING.md  README.md  SESSION_LOG.md  awesome_mcp_readme.md  build_desktop.py  build_installer.py  build_mac_app.py  build_mac_safe.command  build_release_assets.py  clipacanvas.html  code2video.html  desktop_app.py  desktop_requirements.txt  glama.json  launch_desktop.bat  launch_desktop.command  package-lock.json.bak  package.json  playwright_render.mjs  playwright_render.py  render.yaml  requirements.txt  serve.py  smithery.yaml  tunnel.example.yaml  tunnel.yaml  vercel.json
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: build-macos-app.yml  codeql.yml
.mcp/: server.json
.well-known/: glama.json
.well-known/mcp/: server-card.json
api/: config.js
claude/: connectors-directory-submission.md
claude/desktop-extension/: .mcpbignore  README.md  manifest.json  pyproject.toml
claude/desktop-extension/src/: server.py
claude/desktop-extension/src/clipacanvas_mcp/: __init__.py  config.py  playwright_render.py  render_tool.py
installer/: CODE2VIDEO.iss  ClipACanvas.iss
mcp/: Dockerfile  README.md  README_HF.md  pyproject.toml  server.json  start.sh
mcp/.well-known/mcp/: server-card.json
mcp/src/clipacanvas_mcp/: playwright_render.py  render_tool.py  server.py  sse_app.py
plugins/clipacanvas/: .mcp.json
plugins/clipacanvas/.codex-plugin/: plugin.json
plugins/clipacanvas/skills/clipacanvas-render/: SKILL.md
tests/: frontend_render_matrix.py
tui/: README.md  pyproject.toml
tui/src/clipacanvas_tui/: __init__.py  app.py  clipboard.py  playwright_render.py  preview_server.py
tui/src/clipacanvas_tui/screens/: __init__.py  editor.py
website/: README.md  claude.html  index.html  privacy.html  styles.css
