[project]
name = "clipacanvas-tui"
version = "1.0.0"
description = "Clip.A.Canvas TUI — interactive terminal UI for rendering HTML/CSS/JS to MP4"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "imageio-ffmpeg",
    "playwright",
]

[project.scripts]
clippp = "clipacanvas_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clipacanvas_tui"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
